# tinyllm

./: .gitignore  Checkpoints.py  Config.py  DataModule.py  EarlyStopping.py  Main.py  Model.py  README.md  TextGenerator.py  Trainer.py  archive.sh  evaluator.py  infer.py  lr_strategy.py  make_tender_buttons_dataset.py  manage_checkpoints.py  persistence.py  plot_utils.py  pyproject.toml  pyrightconfig.json  r.bat  requirements.txt  run.sh  runTinyLlm.sh  tensor_utils.py
fixtureData/: input.txt
src/: Checkpoint.py  DataModule.py  EarlyStopping.py  LRScheduleStrategy.py  Main.py  Model.py  TextGenerator.py  Trainer.py  evaluator.py  infer.py  make_tender_buttons_dataset.py  persistence.py  plot_utils.py
src/llm/: Checkpoint.py  Config.py  DataBottleneckProfiler.py  DataModule.py  EarlyStopping.py  Evaluator.py  LRScheduleStrategy.py  Main.py  Model.py  TextGenerator.py  Trainer.py  Transformer.py  __init__.py  checkGPU.py  evaluator.py  generative.py  infer.py  persistence.py  plot_utils.py  tensor_utils.py
tests/: conftest.py  test_core.py
tests/integration/: test_checkpoint_resume_rng.py  test_persistence.py  test_training_smoke.py
tests/unit/: test_core.py  test_device_fallback.py  test_generative_interface.py  test_lr_schedule_smoke.py
